--- a/thesis/index.html
+++ b/thesis/index.html
@@ -14,7 +14,39 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <title>Thesis</title>
 </head>
+
 <body>
     <img src="nyc-cover.jpg" class="hero-image" alt="New York City">
     <h1 class="text-on-image">New York City’s plan to soak up the rain</h1>
+    <div class="center-content">
+        <p>In 2021, New York City’s residents — over eight million people — received the city’s first ever flash flood
+            emergency alert. The cause? Two weeks of rain totaling a little over eight inches.</p>
+        <p>The storms followed Hurricane Ida just a week earlier which had killed 46 people in the north east, and at
+            least 16 in the city. Most of these deaths happened in basement apartments. The city has X number of them,
+            housing Y people.</p>
+        <p>The first stormwater rule was established in response to a federal stormwater management ruling in 1990. The
+            scope of the ruling was broadened to include more sites — smaller, private ones — in 2003. Phase two of
+            stormwater regulations included all areas with over at least an acre of disturbance. </p>
+        <p>“It’s becoming more evident as time passes that there is a greater need for stormwater management practices
+            that are technically effective and viable in New York State,” NG Kaul, Water Division director wrote in a
+            2001 stormwater management design manual report.</p>
+        <p>About two thirds of the city is covered in concrete leaving little permeable surface. Further urban
+            development only makes water management more difficult — including both stormwater and sewage. The 2001
+            stormwater management manual noted that as more urbanization occurs, an increased amount of rainwater is
+            directly converted into stormwater. A one-acre parking lot can produce 16 times more stormwater runoff than
+            a one-acre meadow each year, the report noted.</p>
+        <h3>Insert section on increased amount of runoff because of more rain – data for rain events and inches of rain
+            each year.</h3>
+        <p>The problem isn’t just limited to an increased amount of rain. Stormwater runoff also harms water quality in
+            the city. In storm events, which are increasingly more frequent, runoff collects pollutants that then end up
+            in the city’s canals.</p>
+        <p>One such is Brooklyn’s nearly 2-mile-long Gowanus Canal which empties into the New York Harbor. The canal was
+            used for domestic shipping in the 19th century, causing it to get heavily polluted. Even as most industrial
+            activity stopped by the 20th century, the pollutants remained. There is currently a $1.5 billion federal
+            Environmental Protection Agency (EPA) cleanup underway at Gowanus. The work began in November last year to
+            dredge the main channel of the canal south of the Carroll Street bridge.</p>
+        <p>The canal has over a dozen contaminants, including heavy metals, mercury, lead, and copper in high levels,
+            according to a press release by the EPA. Industrial activity and sewer overflow are considered responsible
+            for the contaminants. </p>
+    </div>
 </body>
