--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 </p>
             </a>
         </nav>
-        <h1>Hi! I'm Areena! 👩🏻‍💻</h1>
+        <h1>नमस्ते </h1> 
+        <h1>hello. I'm Areena! 👩🏻‍💻</h1>
         <div class="social-media-icons">
             <a href="https://twitter.com/AreenaArora" target='blank' aria-label="Areena Arora's Twitter"> <i
                     class="fa-brands fa-twitter fa-2x" style="color:#1DA1F2"></i></a>
