--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         </div>
         <h2> I'm a <span style="color: #ea624e">data journalist.</span> I'm: </h2>
         <h3>
-            <ul><span style="background-color:#D3D3D3">~Interested in</span> covering climate crisis, waste management
+            <ul><span style="background-color:#b4f7ae">~Interested in</span> covering climate crisis, waste management
                 and
                 infrastructure.
             </ul>
-            <ul><span style="background-color:#D3D3D3">~Working on</span> improving my visualization skills and writing
+            <ul><span style="background-color:#b4f7ae">~Working on</span> improving my visualization skills and writing
                 cleaner code.</ul>
         </h3>
         <br>
