--- a/d3-project/index.html
+++ b/d3-project/index.html
@@ -21,7 +21,8 @@
 
 <body>
     <div class="center-content">
-        <h1>Test text</h1>
+        <h1>Exploring NYC payroll data with D3</h1>
+        <p>New York City's payroll dataset is one I'm familiar with and have written a fair bit about too. For this project however, I wanted to see how much easier D3 makes my life (hint: It did not).</p>
         <div id="dataviz"></div>
         <div id="scatterplot"></div>
         <div id="my_dataviz"></div>
