--- a/d3-project/index.html
+++ b/d3-project/index.html
@@ -22,10 +22,17 @@
 <body>
     <div class="center-content">
         <h1>Exploring NYC payroll data with D3</h1>
-        <p>New York City's payroll dataset is one I'm familiar with and have written a fair bit about too. For this project however, I wanted to see how much easier D3 makes my life (hint: It did not).</p>
+        <p>New York City's payroll dataset is one I'm familiar with and have <a href="https://areenaarora.com/salaries/">written in detail about it too.</a> For this project however, I wanted to see how much easier D3 makes my life (hint: It did not).</p>
+        <p>I can now say I know (ish) JavaScript a bit and thanks to this exercise, I understand D3's syntax better. All these charts were made possible thanks to <a href="https://d3-graph-gallery.com/">The D3 Graph Gallery!</a>
+            <p>In reporting on this data previously, I learned that some agencies spend way more than others on overtime pay— for various reasons.</p>
+            <p>This first chart here shows the same! Here, I've plotted overtime spending by agencies in 2021.</p>
         <div id="dataviz"></div>
-        <div id="scatterplot"></div>
+        <p>New York Police Department spent close to $500 million in just overtime across all its employees. The next highest was the Fire Department at a little under $300 million.</p>
+        
         <div id="my_dataviz"></div>
+        <h3>The chart that didn't quite work:</h3>
+        <p>This chart was meant to show gross salary and overtime pay. The x-axis shows gross base salary and y-axis shows overtime pay. Some employees in the $90,000 to $130,000 gross salary range made over $100,000 in just overtime.</p>
+        <div id="scatterplot"></div>
     </div>
     <script src="script.js"></script>
     <script src="script2.js"></script>
