--- a/d3-project/index.html
+++ b/d3-project/index.html
@@ -68,6 +68,8 @@
             shows overtime pay. Some employees in the $90,000 to $130,000 gross salary range made over $100,000 in just
             overtime.</p>
         <div id="scatterplot"></div>
+        <h2>Aaand, finally: What I couldn't get to work:</h2>
+        <p>The charts don't have titles, labeled axis and legends. I tried various code combinations but just couldn't get it to work.</p>
     </div>
     <script src="script.js"></script>
     <script src="script2.js"></script>
