--- a/d3-project/index.html
+++ b/d3-project/index.html
@@ -46,7 +46,8 @@
     <div class="center-content">
         <h1>Exploring NYC payroll data with D3</h1>
         <p>New York City's payroll dataset is one I'm familiar with and have <a
-                href="https://areenaarora.com/salaries/">written in detail about it too.</a> For this project however, I
+                href="https://areenaarora.com/salaries/"><span class="highlighted-words"> written in detail about it
+                    too.</span></a> For this project however, I
             wanted to see how much easier D3 makes my life (hint: It did not).</p>
         <p>I can now say I know (ish) JavaScript a bit and thanks to this exercise, I understand D3's syntax better. All
             these charts were made possible thanks to <a href="https://d3-graph-gallery.com/"><span
@@ -69,7 +70,8 @@
             overtime.</p>
         <div id="scatterplot"></div>
         <h2>Aaand, finally: What I couldn't get to work:</h2>
-        <p>The charts don't have titles, labeled axis and legends. I tried various code combinations but just couldn't get it to work.</p>
+        <p>The charts don't have titles, labeled axis and legends. I tried various code combinations but just couldn't
+            get it to work.</p>
     </div>
     <script src="script.js"></script>
     <script src="script2.js"></script>
