--- a/thesis/index.html
+++ b/thesis/index.html
@@ -12,41 +12,80 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
-    <title>Thesis</title>
+    <title>Sponge city!</title>
 </head>
 
 <body>
     <img src="nyc-cover.jpg" class="hero-image" alt="New York City">
-    <h1 class="text-on-image">New York City’s plan to soak up the rain</h1>
+    <h1 class="text-on-image">When the next rainstorm hits, how will the concrete jungle soak it up?</h1>
     <div class="center-content">
-        <p>In 2021, New York City’s residents — over eight million people — received the city’s first ever flash flood
-            emergency alert. The cause? Two weeks of rain totaling a little over eight inches.</p>
-        <p>The storms followed Hurricane Ida just a week earlier which had killed 46 people in the north east, and at
-            least 16 in the city. Most of these deaths happened in basement apartments. The city has X number of them,
-            housing Y people.</p>
-        <p>The first stormwater rule was established in response to a federal stormwater management ruling in 1990. The
-            scope of the ruling was broadened to include more sites — smaller, private ones — in 2003. Phase two of
-            stormwater regulations included all areas with over at least an acre of disturbance. </p>
-        <p>“It’s becoming more evident as time passes that there is a greater need for stormwater management practices
-            that are technically effective and viable in New York State,” NG Kaul, Water Division director wrote in a
-            2001 stormwater management design manual report.</p>
-        <p>About two thirds of the city is covered in concrete leaving little permeable surface. Further urban
-            development only makes water management more difficult — including both stormwater and sewage. The 2001
-            stormwater management manual noted that as more urbanization occurs, an increased amount of rainwater is
-            directly converted into stormwater. A one-acre parking lot can produce 16 times more stormwater runoff than
-            a one-acre meadow each year, the report noted.</p>
-        <h3>Insert section on increased amount of runoff because of more rain – data for rain events and inches of rain
-            each year.</h3>
-        <p>The problem isn’t just limited to an increased amount of rain. Stormwater runoff also harms water quality in
-            the city. In storm events, which are increasingly more frequent, runoff collects pollutants that then end up
-            in the city’s canals.</p>
-        <p>One such is Brooklyn’s nearly 2-mile-long Gowanus Canal which empties into the New York Harbor. The canal was
-            used for domestic shipping in the 19th century, causing it to get heavily polluted. Even as most industrial
-            activity stopped by the 20th century, the pollutants remained. There is currently a $1.5 billion federal
-            Environmental Protection Agency (EPA) cleanup underway at Gowanus. The work began in November last year to
-            dredge the main channel of the canal south of the Carroll Street bridge.</p>
-        <p>The canal has over a dozen contaminants, including heavy metals, mercury, lead, and copper in high levels,
-            according to a press release by the EPA. Industrial activity and sewer overflow are considered responsible
-            for the contaminants. </p>
+        <h2>The answer isn’t straightforward</h2>
+        <p>Jamil Aziz, a life-long New Yorker saw the tragedy firsthand when superstorm Sandy raged through his
+            neighborhood almost a decade ago.</p>
+        <p>“Water was out. Lights were out below 40th street for what felt like two weeks,” he said. The wind was
+            alarming, unlike he’d ever experienced before, he said. “People taped up windows to protect from the wind.”
+        </p>
+        <p>When Sandy hit, he also saw the local Con Edison power plant explode.</p>
+        <p>“The sky lit up green up for five seconds or so and there was a loud boom and then all lights went out in the
+            neighborhood,” Aziz said. “We live a hop, skip and jump away from the Atlantic Ocean, right in mother nature
+            … Sandy showed how we’ve to respect mother nature.”</p>
+        <p>The hurricane killed 44 city residents and caused an estimated $19 billion in damages and lost economic
+            activity, according to data from the city. It destroyed over 300 houses in a span of mere 48 hours. Millions
+            in the city spent days after with no power supply and running water.</p>
+        <p>Aziz saw apartment buildings’ lobbies get flooded, friends lose cars and other belongings.</p>
+        <p>“There were cars floating like rubber duckies on my street … But you know, things like that, as disruptive as
+            they are, they bring the city together,” he said.</p>
+        <p>Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets, subway
+            stations and even basement apartments, damaging personal property. New York has the most number of people
+            living in high-risk flood zones, compared to other cities in the country, according to data from the city.
+            This means that the number of New Yorkers living in the city’s floodplain is higher than the entire
+            population of other major cities like Cleveland, Ohio and Tampa, Florida, according to data from the city.
+        </p>
+        <p>Since 2012, city’s residents have lodged 309,830 flooding and sewer overflow complaints to the city,
+            according to the city’s 311-complaints’ database. Three-one-one is a residents’ hotline used to report
+            non-urgent problems. For flooding and sewage related issues, the complaints are routed to the Department of
+            Environmental Protection.</p>
+        <p>Calling in for a complaint can take anywhere between 12-15 minutes depending on the hold-time. Complaints can
+            also be filed online by filing out a simple form.</p>
+        <p>Most complaints have always come from Queens and Brooklyn. More narrowly, the single neighborhood with the
+            most complaints filed is Great Kills neighborhood in Staten Island. Most of these complaints were about
+            sewer back up, catch basin and street flooding. The neighborhood with the second highest number of
+            complaints is Jamaica in Queens. Overall, in over 5,000 instances, the city found that flooding conditions
+            were caused by excessive rain.</p>
+        <p>The annual rainfall in New York City is about 1,270 millimeters, or 50 inches, according to the National
+            Weather Service. The average number of days it rains in the city is 134, according to data cited in the
+            study. Sea level in the city has risen at least a foot in the last century, according to the city.</p>
+        <p>Urban flooding doesn’t just cause damage to property; in a city as fast-paced as New York, it also disrupts
+            movement causing loss of work hours and wages. About two thirds of the city is covered with concrete, making
+            it highly vulnerable to overflowing streets and urban flooding. As cities have grown, they’ve added a lot of
+            impervious surfaces, exasperating flooding, Richard Norton who specializes in urban and regional planning at
+            the University of Michigan, said.</p>
+            <p>But, there’s no magic threshold for how much concrete surface is too much for a city.</p>
+            <p>“It’s not easy to say 25% or more concrete cover is problematic,” Norton said. “People have to live somewhere. If people live in more compact surfaces, on a per capita basis there’s acutally less impervious surface.”</p>
+            <p>If New Yorkers lived on single-family lots, they’d cover a lot more impervious surface, he added, explaining the need for adding more green infrastructure in tandem with urban planning.</p>
+            <p>The easiest low hanging fruit, which is what the city is already doing is building more green infrastructure, Norton said. “But, it’s usually disruptive to life as it is.” </p>
+            <p>To tackle urban flooding head on, the city has some plans to soak up the rain — whether these steps are enough or not has residents and experts divided.</p>
+            <p>Through various other city programs, including the Bluebelt system, the city is trying to improve its drainage. The Bluebelt system drains 16 watersheds located at the island’s southern end impacting nearly 10,000 acres of land. Now the city has a new way of tackling the problem. One that involves shifting some of the burden on private property owners.</p>
+            <p>In February, the city added another tool to its armor by implementing a new stormwater ruling requiring newly developed or redeveloped properties to manage stormwater on site. The new program’s impact remains to be seen, but advocates such as Amy Motzny, a senior planner at the Gowanus Canal Conservancy are hopeful of its merits. The conservancy is a non-profit group that advocates for clean water for the neighborhood, among other things.</p>
+            <p>Multiple stakeholders — various city agencies including the Parks Department, advocacy groups, Department of Environmental Protection, Department of Transportation are involved in improving the lives of NYC residents, by building green infrastructures.</p>
+            <p>The idea is to make the city’s surface more permeable by adding more green infrastructure. On a day when the sun is out, it’s easy to dismiss rain gardens as uncontrolled weed growing at intersections, often jaded with trashed pizza boxes, fruit peels and stray plastics.</p>
+            <p>There’s signage, sometimes hidden by tall grass, other times visible, but not immediately clear. These rain gardens and bioswales are part of the city’s green infrastructure — built to prevent the city’s streets from flooding.</p>
+            <p>The initiative to paint the city green began in 2010 with a $1.5 billion commitment from the then-Mike Bloomberg administration. The idea was to capture street runoff and excess sewage preventing it from entering the city’s waterways.</p>
+            <p>Since the program’s inception, the city has built over 10,700 green infrastructures— most of them being in Queens and Brooklyn.</p>
+            <p>“At the point where we’ve sited all we can … We’re looking for alternative ways to put in more green infrastructure,” Nyleen Euton, green infrastructure grant program manager said.</p>
+            <p>The 311-complaints filed by New Yorkers are one of the factors that help determine the location of these rain gardens. Other factors include frequency of sewage overflow, local bedrock and soil conditions, according to Euton.</p>
+            <p>The Gowanus Sponge Park is one such attempt. But there are plenty of challenges to be dealt with, including rapid rezoning of the area — building apartments on flood-prone areas, constant maintenance work required on rain gardens and invasive plant species growing on these rain gardens.</p>
+            <p>Last year, the city was reminded of Sandy woes when Hurricane Ida hit, bringing in a little over eight inches of rain. It disrupted the city that otherwise never sleeps. The flash flooding and rain killed at least 42 people — 13 in the city, most of them in basement apartment units.</p>
+            <p>Ida brought enough rain in just one day to almost completely confine the 305-foot-tall Statue of Liberty. It was also the city's fifth wettest day since 1869.</p>
+            <p>While Ida was a hurricane, flash floods are becoming increasingly common. In 2021, there were 10 flash-flood warnings issued for the city, according to data archived by Iowa State University. That’s the highest it’s been since 2006, the earliest available year in the dataset. The National Weather Service defines a flash flood as one caused by excessive rainfall in a short period of time, generally less than 6 hours.</p>
+            <p>The streets near the nearly 2-mile-long Gowanus Canal in Brooklyn for instance, are prone to flooding with as little as a few inches of rain. Joseph Alexiou, a Gowanus resident and journalist who has authored a book on the canal blames real estate development in the area for the problem.</p>
+            <p>“They can try to improve sewage all they want, but until we keep building on flood-prone streets, we’re not really solving the problem,” he said. “It’s like trying to stop a whole pitcher of water with a tea spoon.”</p>
+            <p>Urban flooding is also not just limited to extreme weather events, according to Norton.</p>
+            <p>“Most places in North east and the Midwest are experiencing increased rainfall,” Norton said. “There are shorter, heavier bursts, rather than longer drawn-out rain events and most cities don’t have the infrastructure for it.”</p>
+            <p>“Flooding has been getting worse because of climate change … add to that, there’s been more severe weather events lately,” Shino Tanikawa, the executive director of NYC Soil & Water Conservation District, said. The organization is a government body that works in partnership with the city’s DEP and Parks and Recreation department.</p>
+            <p>The city’s need for infrastructure upgrades isn’t a first.</p>
+            <p>The city was built for the convenience of Dutch traders, Aziz who is a tour guide in the city said. A lot of real estate has elevated structures because ships would come up to the shore. As the city has grown, this has meant increased flood risk, he added.</p>
+            <p>Back in the early 1830s, New York City stunk so bad, it is said, that travelers could sniff out the city as far as six miles away. Diseases, contamination and poor waste management all contributed to prompting the city to address its fresh water problem. </p>
+            <p>Flash forward two-hundred years, the city is in need of an infrastructure renaissance. This time to deal with the ongoing climate crisis and increasingly more frequent extreme weather events. However, the simple sounding cocktail – adding more green spaces and improving sewage flow — involves plenty of challenges. It would involve tearing down pipes and rebuilding sewage lines and streets to better manage overflows.</p>
     </div>
 </body>
