--- a/thesis/index.html
+++ b/thesis/index.html
@@ -220,7 +220,7 @@
         <p>Most complaints have always come from Queens and Brooklyn. More narrowly, the single neighborhood with the
             most complaints filed is Great Kills neighborhood in Staten Island. Since 2012, there's been an increase of
             nearly 22% in the number of complaints filed in the neighborhood. Most of these complaints were about
-            sewer back up, catch basin and street flooding. In February last year, the city reported completion of a $48
+            sewer back up, catch basin and street flooding. In <a href="https://www1.nyc.gov/site/dep/news/21-003/city-completes-installation-6-4-miles-new-sewers-water-mains-eltingville-great" target="_blank">February last year,</a> the city reported completion of a $48
             million project to upgrade sewers and water mains in the neighborhood. </p>
 
         <p>The neighborhood with the second highest number of
