--- a/thesis/index.html
+++ b/thesis/index.html
@@ -29,18 +29,20 @@
         <p>“Water was out. Lights were out below 40th street for what felt like two weeks,” he said. The wind was
             alarming, unlike he’d ever experienced before, he said. “People taped up windows to protect from the wind.”
         </p>
-        <p>When Sandy hit, he also saw the local Con Edison power plant explode.</p>
+        <p>He also saw the local Con Edison power plant explode.</p>
         <p>“The sky lit up green up for five seconds or so and there was a loud boom and then all lights went out in the
             neighborhood,” Aziz said. “We live a hop, skip and jump away from the Atlantic Ocean, right in mother nature
             … Sandy showed how we’ve to respect mother nature.”</p>
         <p>The hurricane killed 44 city residents and caused an estimated $19 billion in damages and lost economic
             activity, according to data from the city. It destroyed over 300 houses in a span of mere 48 hours. Millions
-            in the city spent days after with no power supply and running water.</p>
+            in the city spent days after with no power supply and no running water.</p>
         <p>Aziz saw apartment buildings’ lobbies get flooded, friends lose cars and other belongings.</p>
         <p>“There were cars floating like rubber duckies on my street … But you know, things like that, as disruptive as
             they are, they bring the city together,” he said.</p>
-        <p>Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets, subway
-            stations and even basement apartments, damaging personal property. New York has the most number of people
+        <h3>Year after year since, New Yorkers have been complaining about urban flooding ravaging their streets, subway
+            stations and even basement apartments, damaging personal property. </h3>
+
+        <p>New York has the most number of people
             living in high-risk flood zones, compared to other cities in the country, according to data from the city.
             This means that the number of New Yorkers living in the city’s floodplain is higher than the entire
             population of other major cities like Cleveland, Ohio and Tampa, Florida, according to data from the city.
