--- a/thesis/index.html
+++ b/thesis/index.html
@@ -468,19 +468,19 @@
     <div class="center-content">
         <p>Urban flooding doesn’t just cause damage to property; in a city as fast-paced as New York, it also disrupts
             movement causing loss of work hours and wages. About two thirds of the city is covered with concrete, making
-            it highly vulnerable to overflowing streets and urban flooding. As cities have grown, they’ve added a lot of
+            it highly vulnerable to overflowing streets. As cities have grown, they’ve added a lot of
             impervious surfaces, exasperating flooding, Richard Norton who specializes in urban and regional planning at
             the University of Michigan, said.</p>
         <p>But, there’s no magic threshold for how much concrete surface is too much for a city.</p>
         <p>“It’s not easy to say 25% or more concrete cover is problematic,” Norton said. “People have to live
-            somewhere. If people live in more compact surfaces, on a per capita basis there’s acutally less impervious
+            somewhere. If people live in more compact surfaces— as in New York— on a per capita basis that’s acutally less impervious
             surface.”</p>
-        <p>If New Yorkers lived on single-family lots, they’d cover a lot more impervious surface, he added, explaining
+        <p>On single-family lots, the same population would cover a lot more impervious surface, he added, explaining
             the need for adding more green infrastructure in tandem with urban planning.</p>
         <p>The easiest low hanging fruit, which is what the city is already doing is building more green infrastructure,
             Norton said. “But, it’s usually disruptive to life as it is.” </p>
-        <p>To tackle urban flooding head on, the city has some plans to soak up the rain — whether these steps are
-            enough or not has residents and experts divided.</p>
+        <h3>To tackle urban flooding head on, the city has some plans to soak up the rain — whether these steps are
+            enough or not has residents and experts divided.</h3>
         <p>Through various other city programs, including the Bluebelt system, the city is trying to improve its
             drainage. The Bluebelt system drains 16 watersheds located at the island’s southern end impacting nearly
             10,000 acres of land. Now the city has a new way of tackling the problem. One that involves shifting some of
