--- a/thesis/index.html
+++ b/thesis/index.html
@@ -488,12 +488,12 @@
         <p>In February, the city added another tool to its armor by implementing a new stormwater ruling requiring newly
             developed or redeveloped properties to manage stormwater on site. The new program’s impact remains to be
             seen, but advocates such as Amy Motzny, a senior planner at the Gowanus Canal Conservancy are hopeful of its
-            merits. The conservancy is a non-profit group that advocates for clean water for the neighborhood, among
-            other things.</p>
+            merits. The conservancy is a non-profit group that advocates for clean water.</p>
         <p>Multiple stakeholders — various city agencies including the Parks Department, advocacy groups, Department of
             Environmental Protection, Department of Transportation are involved in improving the lives of NYC residents,
-            by building green infrastructures.</p>
-        <p>The idea is to make the city’s surface more permeable by adding more green infrastructure. On a day when the
+            by building green infrastructures, in an attemt to make the city’s surface more permeable.</p>
+            
+            <p>On a day when the
             sun is out, it’s easy to dismiss rain gardens as uncontrolled weed growing at intersections, often jaded
             with trashed pizza boxes, fruit peels and stray plastics.</p>
         <p>There’s signage, sometimes hidden by tall grass, other times visible, but not immediately clear. These rain
