--- a/thesis/index.html
+++ b/thesis/index.html
@@ -492,7 +492,7 @@
         <p>Multiple stakeholders — various city agencies including the Parks Department, advocacy groups, Department of
             Environmental Protection, Department of Transportation are involved in improving the lives of NYC residents,
             by building green infrastructures, in an attemt to make the city’s surface more permeable.</p>
-            
+            <img src="sponge-park.png">
             <p>On a day when the
             sun is out, it’s easy to dismiss rain gardens as uncontrolled weed growing at intersections, often jaded
             with trashed pizza boxes, fruit peels and stray plastics.</p>
