--- a/thesis/index.html
+++ b/thesis/index.html
@@ -504,6 +504,7 @@
             entering the city’s waterways.</p>
         <p>Since the program’s inception, the city has built over 10,700 green infrastructures— most of them being in
             Queens and Brooklyn.</p>
+            <!-- Add number of green infrastructures per borough -->
     </div>
     <div id="map"></div>
     <div class="center-content">
