--- a/thesis/index.html
+++ b/thesis/index.html
@@ -46,7 +46,7 @@
 
         <p>New York has the most number of people
             living in high-risk flood zones, compared to other cities in the country, according to data from the city,
-            making New Yorkers prone to property damage in even major rain events— which are becoming increasingly more
+            making New Yorkers prone to property damage in heavy rain events— which are becoming increasingly more
             frequent.
             The number of New Yorkers living in the city’s floodplain is higher than the entire
             population of other major cities like Cleveland, Ohio and Tampa, Florida.
