--- a/thesis/index.html
+++ b/thesis/index.html
@@ -240,7 +240,7 @@
             nearly 22% in the number of complaints filed since 2012. Most of these complaints were about
             sewer back up, catch basin and street flooding. In <a
                 href="https://www1.nyc.gov/site/dep/news/21-003/city-completes-installation-6-4-miles-new-sewers-water-mains-eltingville-great"
-                target="_blank">February last year,</a> the city reported completion of a $48
+                target="_blank"><span style="color: #EB614F;">February last year,</span></a> the city reported completion of a $48
             million project to upgrade sewers and water mains in the neighborhood. </p>
 
         <p>The neighborhood with the second highest number of
