--- a/thesis/index.html
+++ b/thesis/index.html
@@ -503,10 +503,9 @@
             warnings issued for the city, according to data archived by Iowa State University. That’s the highest it’s
             been since 2006, the earliest available year in the dataset. The National Weather Service defines a flash
             flood as one caused by excessive rainfall in a short period of time, generally less than 6 hours.</p>
-
         <p>Multiple stakeholders — various city agencies including the Parks Department, advocacy groups, Department of
             Environmental Protection, Department of Transportation are involved in improving the lives of NYC residents,
-            by building green infrastructures, in an attemt to make the city’s surface more permeable.</p>
+            by building green infrastructures, in an attempt to make the city’s surface more permeable.</p>
         <p>On a day when the
             sun is out, it’s easy to dismiss rain gardens as uncontrolled weed growing at intersections, often jaded
             with trashed pizza boxes, fruit peels and stray plastics.</p>
