--- a/thesis/index.html
+++ b/thesis/index.html
@@ -510,8 +510,7 @@
             sun is out, it’s easy to dismiss rain gardens as uncontrolled weed growing at intersections, often jaded
             with trashed pizza boxes, fruit peels and stray plastics.</p>
         <p>There’s signage, sometimes hidden by tall grass, other times visible, but not immediately clear. These rain
-            gardens and bioswales are part of the city’s green infrastructure — built to prevent the city’s streets from
-            flooding.</p>
+            gardens and bioswales are part of the city’s green infrastructure — built to safeguard the city’s streets.</p>
         <p>The initiative to paint the city green began in 2010 with a $1.5 billion commitment from the then-Mike
             Bloomberg administration. The idea was to capture street runoff and excess sewage preventing it from
             entering the city’s waterways.</p>
